# DeploySamurai

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.codex/: README.md  architecture-diagram.md  flow-document.md  microservice-plan.md  project-plan.md  technical-document.md  todo.md
.codex/generated_SAM_sample/: job_1394d7fde50a-template.yaml  job_c2669536cf0a-template.yaml
.dart-appdata/.dart-tool/: CLIENT_ID  dart-flutter-telemetry-session.json
alembic/: env.py
alembic/versions/: 20260614_0001_create_jobs.py
apps/frontend/: README.md
apps/frontend/deploysamourai/: .gitignore  README.md  pubspec.yaml
docs/: technical-document.md  user-flow.md
scripts/: dev.ps1  test.ps1
src/deploy_samurai/: main.py
src/deploy_samurai/api/: router.py
tests/contracts/: test_job_contracts.py  test_sam_generation_contracts.py  test_service_contracts.py  test_verification_contracts.py
tests/integration/: test_deployment_helpers.py
tests/unit/: test_app_factory.py  test_architecture_reasoner.py  test_architecture_summary.py  test_architecture_topology.py  test_deployment_api.py  test_deployment_preflight.py  test_endpoint_smoke_verification.py  test_github_url.py  test_reasoning_api.py  test_repo_analyzer.py  test_repo_metadata.py  test_repo_normalization.py  test_repo_structure.py  test_repo_workspace.py  test_sam_cli_deployment.py  test_sam_generation_api.py  test_sam_template.py  test_service_boundaries.py  test_stack_detection.py  test_stack_status_verification.py  test_verification_api.py  test_verifier.py
(+80 files in other folders)
