[project]
name = "deploy-samurai"
version = "0.1.0"
description = "AI-assisted AWS SAM serverless architect for GitHub repositories."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "boto3>=1.34.0",
    "fastapi>=0.112.0",
    "httpx>=0.27.0",
    "langgraph>=0.2.74",
    "openai>=1.99.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pyyaml>=6.0.2",
    "sqlalchemy[asyncio]>=2.0.32",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.5.6",
]

[project.scripts]
deploy-samurai-api = "deploy_samurai.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deploy_samurai"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
